<resources>
    <string name="app_name">PreguntApp: LCC</string>
    <string name="descripcion">Cargando</string>
    <string name="txtPasword">*******</string>
    <string name="txtMail">nombre.apellido@usach.cl</string>
    <string name="checboxaministrador">Entrar como administrador</string>
    <string name="boton">Ingresar</string>


    <string name="botonPerfil">Perfil</string>
    <string name="botonVolver">Volver</string>
    <string name="botonirAGraficos">Graficos</string>
    <string name="botonCerrarSesion">cerrar sesion</string>

    <string name="botonencuestasPendientes">Encuestas Pendientes</string>
    <string name="botonIrAAdministrarEncuestas">Administrar encuestas</string>


    <string name="botonCrearCuestionario">Crear Cuestionario</string>
    <string name="botonBuscarCuestionario">Buscar Cuestionario</string>
    <string name="botonModificarCuestionario">Modificar Cuestionario</string>
    <string name="terminarCuestionario">Terminar Cuestionario</string>
    <string name="nombreEncuesta">Nombre Encuesta</string>


    <string name="buttonAgregarPregunta">Agregar Preguntas</string>
    <string name="cantidaddepreguntas">N° Preguntas</string>
    <string name="txtTituloEncuesta">Titulo Encuesta</string>
    <string name="buttonSubirEncuesta">Seleccionar Filtros</string>
    <string name="crearCuestionario_buttonSubirFecha">Agregar Fecha</string>
    <string name="crearCuestionario_editTextFechatermino">Fecha Termino</string>


    <string name="crearPreguntas_buttonAgregarOpciones">Agregar Opciones</string>
    <string name="crearPreguntas_cantidadDeOpciones">N° Opciones</string>
    <string name="crearPreguntas_txtTituloPregunta">Contenido pregunta</string>

    <string name="rowPreguntasPendientes_buttonResponder">Responder</string>
    <string name="buscar_encuestas">Buscar Encuestas</string>
    <string name="Responder_encuestas_button_continuar">Continuar</string>

    <string name="Filtro_Cuestionario_siguiente_filtro">Siguiente Filtro</string>
    <string name="Filtro_Cuestionario_volver">Volver</string>
    <string name="Flitro_Cuestionario_subir_encuesta">Subir Encuesta</string>
    <string name="Filtro_Cuestionario_TextView_Orientacion_sexual">Orientacion Sexual</string>
    <string name="Filtro_Cuestionario_TextView_Orientacion_sexual_Genero">Genero</string>
    <string name="Filtro_Cuestionario_TextView_Genero">Genero</string>
    <string name="Filtro_Cuestionario_TextView_Facultad">Facultad</string>
    <string name="Filtro_Cuestionario_TextView_Carrera">Carrera</string>
    <string name="Filtro_Cuestionario_TextView_Comuna">Comuna</string>
    <string name="Filtro_Cuestionario_TextView_estado_civil">Situacion Sentimental</string>
    <string name="Filtro_Cuestionario_TextView_ano_ingreso">Año Ingreso</string>
    <string name="Filtro_Cuestionario_TextView_semestre">Nivel Academico</string>
    <string name="Filtro_Cuestionario_Titulo">Filtros</string>

    <string name="generacion_graficos_generar_pdf">Descargar Archivos</string>
    <string name="generacion_graficos_agregar_graficos">Agregar Graficos</string>
    <string name="generacion_graficos_Total_respuestas">Gente que ha respondido la encuesta: 0</string>
    <string name="terminar_seleccion">Terminar seleccion</string>
    <string name="trabajar_datos">Trabajar Datos</string>
    <string name="obtener_respuestas_de_preguntas">Obtener Respuestas de Preguntas</string>
    <string name="crear_preguntas_tipo_de_respuesta">Tipo de respuesta</string>
    <string name="terminar_encuesta_bajar_encuesta">Bajar Encuesta</string>
    <string name="Terminar_encuesta_titulo">Titulo</string>
    <string name="Terminar_encuesta_preguntas">Preguntas</string>
    <string name="Terminar_encuesta_fecha_termino">Fecha Termino</string>
    <string name="row_pregunta_editar_pregunta">Editar Pregunta</string>
    <string name="crear_preguntas_siguiente_pregunta">Siguiente Pregunta</string>
    <string name="crear_preguntas_terminar_edicion">Terminar Edicion</string>
    <string name="cancelar">Cancelar</string>
    <string name="Administrar_graficos_agregar_preguntas">Agregar pregunta</string>
    <string name="administrar_graficos_trabajar_datos">Trabajar datos</string>
    <string name="Menu_principal_administrador_administrar_administradores">Gestionar Encuestadores</string>
    <string name="registrarte">Registrarte</string>
    <string name="gestionar_administrador_primero_busque_a_una_persona">Primero busque a una persona</string>
    <string name="Aqutivity_registrarse_por_favor_llene_sus_datos">Por favor, llene sus datos</string>
    <string name="activity_registrarse_cancelar">Cancelar</string>
    <string name="activity_registrarse_registrarse">Registrarse</string>
    <string name="_0">0</string>
    <string name="ingrese_contrase_a">Ingrese la contraseña</string>
    <string name="vuelva_a_ingresar_contra_a">Vuelva a ingresar la contraseña</string>
    <string name="descargar_excel">Descargar Excel</string>


</resources>