<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b1b1b1"
    tools:context=".AdministrarCuestionario">

    <Button
        android:id="@+id/botonVolver"
        android:layout_width="73dp"
        android:layout_height="29dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_orange"
        android:drawableBottom="@drawable/ic_volver"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonIrACrearCuestionario"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_below="@id/botonVolver"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_orange"
        android:text="@string/botonCrearCuestionario"
        android:textAlignment="center"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="305dp" />

    <TextView
        android:id="@+id/textViewNombreEncuestaSeleccionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/botonVolver"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:text="@string/nombreEncuesta"
        android:textAlignment="center" />

    <Button
        android:id="@+id/botonirABuscarCuestionario"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_below="@id/botonVolver"
        android:layout_marginTop="11dp"
        android:background="@drawable/round_orange"
        android:text="@string/botonBuscarCuestionario"
        android:textAlignment="center"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonIrAModificarCuestionario"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_below="@id/botonirABuscarCuestionario"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_orange"
        android:text="@string/botonModificarCuestionario"
        android:textAlignment="center"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="305dp" />

    <Button
        android:id="@+id/buttonTerminarCuestionario"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_below="@id/buttonIrACrearCuestionario"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="@drawable/round_orange"
        android:text="@string/terminarCuestionario"
        android:textAlignment="center"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="305dp" />


</RelativeLayout>